--- a/plans.html
+++ b/plans.html
@@ -103,11 +103,7 @@
             </div>
 
             <div class="card-content center-align">
-                <span class="card-title activator grey-text text-darken-4">Ground Floor<i class="material-icons right">more_vert</i></span>
-            </div>
-
-            <div class="card-reveal center-align">
-                <span class="card-title grey-text text-darken-4 center-align">About<i class="material-icons right">close</i></span>
+                <span class="card-title activator grey-text text-darken-4">Ground Floor</span>
             </div>
         </div>
 
@@ -158,11 +154,7 @@
         </div>
 
         <div class="card-content center-align">
-            <span class="card-title activator grey-text text-darken-4">Second Floor<i class="material-icons right">more_vert</i></span>
-        </div>
-
-        <div class="card-reveal center-align">
-            <span class="card-title grey-text text-darken-4 center-align">About<i class="material-icons right">close</i></span>
+            <span class="card-title activator grey-text text-darken-4">Second Floor</span>
         </div>
     </div>
 </div>
@@ -177,11 +169,7 @@
         </div>
 
         <div class="card-content center-align">
-            <span class="card-title activator grey-text text-darken-4">Third Floor<i class="material-icons right">more_vert</i></span>
-        </div>
-
-        <div class="card-reveal center-align">
-            <span class="card-title grey-text text-darken-4 center-align">About<i class="material-icons right">close</i></span>
+            <span class="card-title activator grey-text text-darken-4">Third Floor</span>
         </div>
     </div>
 
@@ -223,11 +211,7 @@
         </div>
 
         <div class="card-content center-align">
-            <span class="card-title activator grey-text text-darken-4">Court<i class="material-icons right">more_vert</i></span>
-        </div>
-
-        <div class="card-reveal center-align">
-            <span class="card-title grey-text text-darken-4 center-align">About<i class="material-icons right">close</i></span>
+            <span class="card-title activator grey-text text-darken-4">Court</span>
         </div>
     </div>
 </div>
